Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5568

HA C++ qpid::messaging AMQP 1.0 client failover logging is not clear.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.27
    • 0.27
    • C++ Client
    • None

    Description

      The qpid::messaging AMQP 1.0 protocol logging does give clear information
      about reconnection during failover. It does not log all reconnect attempts.

      see also
      https://bugzilla.redhat.com/show_bug.cgi?id=1050856
      https://reviews.apache.org/r/17856/

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: