QPID-5568: HA C++ qpid::messaging AMQP 1.0 client failover logging is not clear

The qpid::messaging AMQP 1.0 protocol logging did not give clear information
about reconnection during failover.

This patch simplifies the reconnect logic by collapsing all known addresses from
broker URL and reconnect URLs into a single URL with no duplicates.

It rationalizes the info and notice logging as follows:

# Initial connection with multiple addresses, info logs show the
# full URL, each attempt to connect and the finally connected address.

[Messaging] info Starting connection to amqp:tcp:20.0.10.33:5672,tcp:20.0.10.34:5672,tcp:20.0.10.35:5672
[Messaging] info Connecting to tcp:20.0.10.33:5672
[Messaging] info Failed to connect to tcp:20.0.10.33:5672
[Messaging] info Connecting to tcp:20.0.10.34:5672
[Messaging] info Failed to connect to tcp:20.0.10.34:5672
[Messaging] info Connecting to tcp:20.0.10.35:5672
[Messaging] info Connected to tcp:20.0.10.35:5672

# Re-connection due to a failure. notice logs for the start of reconnection (with full URL)
# and eventual sucess (with individual address). info logs for individual connection attempts.

[Messaging] notice Auto-reconnecting to amqp:tcp:20.0.10.33:5672,tcp:20.0.10.34:5672,tcp:20.0.10.35:5672
[Messaging] info Connecting to tcp:20.0.10.33:5672
[Messaging] info Failed to connect to tcp:20.0.10.33:5672
....
[Messaging] info Connected to tcp:20.0.10.33:5672
[Messaging] notice Auto-reconnected to amqp:tcp:20.0.10.33:5672

The idea here is that there are no logs by default (info is not on by default)
for "normal" behavior, but failover does get a (short) notice log by default.
By turning on info logs you can follow the detailed blow-by-blow of failover
without getting drowned in the detail of debug logs.

Note that final failure to connect is signalled to the application via an exception.
There was not previously any log message for that and I didn't add one.

Additional changes: updated qpid-ping test client to use the messaging library.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1570231 13f79535-47bb-0310-9956-ffa450edef68